# react-native-transmission

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-transmission.podspec  tsconfig.build.json  tsconfig.json
.github/actions/setup/: action.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/cmake/: VcpkgAndroid.cmake
android/src/main/: AndroidManifest.xml
android/src/main/java/com/transmission/: FileCopyUtils.java  TransmissionModule.java  TransmissionPackage.java
cpp/: react-native-transmission.cpp  react-native-transmission.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/transmissionexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/transmissionexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/transmissionexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/TransmissionExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TransmissionExample.xcodeproj/: project.pbxproj
example/ios/TransmissionExample.xcodeproj/xcshareddata/xcschemes/: TransmissionExample.xcscheme
example/ios/TransmissionExampleTests/: TransmissionExampleTests.m
example/src/: App.tsx
ios/: Transmission.h  Transmission.mm
ios/Transmission.xcodeproj/: project.pbxproj
scripts/: clone-transmission.js
src/: index.tsx
